# costastream

./: README.md  build_lambdas.sh
containers/events-generator/: Cargo.toml
containers/events-generator/src/: main.rs
docs/: architecture.drawio
infra/: build_lambdas.sh  package-lock.json  package.json  swagger.json
infra/lib/: infra-stack.ts
infra/lib/modules/: rust-lambda.ts
src/message-counter/: Cargo.toml
src/message-counter/src/: main.rs
src/message-handler/: Cargo.toml
src/message-handler/src/: main.rs
