[package]
name = "events-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch_api = { features = ["reqwest", "helix"] }
twitch_oauth2 = { version = "0.11.0" }
reqwest = { version = "0.11.14" }
tokio = { version = "1.24.2", features = ["full"] }
twitch-irc = "5.0.0"
